--- a/templates/base.jade
+++ b/templates/base.jade
@@ -124,7 +124,7 @@ html(ng-app="abelujo")
               span.badge.ng-cloak(title='{% trans "Number of ongoing commands." %}') {{ "ongoing_commands_nb" | ng }}
 
           li(ng-class="{active: url == 'history' }")
-            a(href='{% url "search_history" %}') {% trans "History" %}
+            a(href='{% url "history_sells" %}') {% trans "History" %}
 
           //li(ng-class="{active: url == 'alerts' }")
             a(href='{% url "search_alerts" %}') {% trans "Alerts" %}
