--- a/templates/base.jade
+++ b/templates/base.jade
@@ -47,7 +47,7 @@ html(ng-app="abelujo")
             a(href='{% url "stats" %}') {% trans "Statistics" %} 
               i.glyphicon.glyphicon-stats
 
-          li#database.dropdown.push-right
+          li.dropdown.push-right
             a.dropdown-toggle(href="#", data-toggle="dropdown", role="button", title='{% trans "Access everything on the database" %}') {% trans "Database" %}
               span.caret
             {% get_current_language as LANGUAGE_CODE %}
@@ -64,7 +64,7 @@ html(ng-app="abelujo")
                 li(href="#")
                     a(href='/{{ LANGUAGE_CODE }}/database') {% trans "All" %}
 
-        form#titlesearch.navbar-form.navbar-left
+        form.navbar-form.navbar-left
           .form-group
             input.form-control(
               style="background-color: #F7F7F9"
@@ -96,7 +96,7 @@ html(ng-app="abelujo")
     #sidebar-wrapper
 
         ul.sidebar-nav.nav.nav-pills.nav-stacked
-          li#mystock(ng-class="{active: url == 'collection' }")
+          li(ng-class="{active: url == 'collection' }")
             a(href='{% url "card_collection" %}') {% trans "My stock" %}
 
           li(ng-class="{active: url == 'search' }")
