--- a/templates/search/baskets.jade
+++ b/templates/search/baskets.jade
@@ -70,7 +70,7 @@ div(ng-cloak, ng-controller="basketsController")
            li: a(href="/databasesearch/basket/{{ 'cur_basket.id'|ng }}/", target="_blank") {% trans "Set the supplier" %}
 
            li.divider(role="separator")
-           li: a(href="#", ng-click="add_to_shelf(cur_basket.id)", title='{% trans "Add all the cards to a shelf and archive the list." %}') {% trans "Add to shelf…" %}
+           li: a(href="#", ng-click="add_to_shelf(cur_basket.id)", title='{% trans "Add all the cards to a shelf." %}') {% trans "Add to shelf…" %}
            li: a(href="#", ng-click="command()", title='{% trans "Mark all the cards to command" %}') {% trans "Command…" %}
            li: a(href="#", ng-click="receive_command()", title='{% trans "Receive a command and check you received all the books" %}') {% trans "Receive a command" %}…
            li: a(href="#", ng-click="return_to_supplier()", title='{% trans "Return the cards to the distributor of this basket." %}') {% trans "Return to supplier" %}…
