--- a/templates/base.jade
+++ b/templates/base.jade
@@ -127,7 +127,7 @@ html(ng-app="abelujo")
           li(ng-class="{active: url == 'history' }")
             a(href='{% url "history_sells" %}') {% trans "History" %}
 
-          li(ng-class="{active: url == 'suppliers' }")
+          li(ng-class="{active: highlight_supplier_menu() }")
             a(href='{% url "suppliers_sells" %}') {% trans "Suppliers" %}
 
           //li(ng-class="{active: url == 'alerts' }")
