rename .jade -> .pug, update url reverse with app namespace: search:foo
URL reverse in templates: instead of

{% url 'history' %}

do

{% url 'search:history' %}

where 'search' is the name of our Django app (sole and true).

--- a/templates/search/card_history.pug
+++ b/templates/search/card_history.pug
@@ -31,9 +31,9 @@
 .row
   .col-lg-10
     ul.nav.nav-tabs
-      li(role="presentation"): a(href="{% url 'card_show' card.pk %}") {% trans "Card details" %}
+      li(role="presentation"): a(href="{% url 'search:card_show' card.pk %}") {% trans "Card details" %}
       li.active(role="presentation")
-        a(href="{% url 'card_history' card.pk %}") {% trans "History" %}
+        a(href="{% url 'search:card_history' card.pk %}") {% trans "History" %}
 
 h3 {{ card.title }}
 div {% trans "Total sells" %}: {{ sells_data.total_sells }}
