--- a/templates/search/history_sells_day.pug
+++ b/templates/search/history_sells_day.pug
@@ -23,13 +23,13 @@
 {% load i18n %}
 
 span
-  a(href="{% url 'history_sells_day' previous_day_fmt %}") &larr; {% trans "Previous" %}
+  a(href="{% url 'search:history_sells_day' previous_day_fmt %}") &larr; {% trans "Previous" %}
   span  &nbsp;
-  a(href="{% url 'history_sells_month' month_fmt %}") {{ day | date:'F' | title }}
+  a(href="{% url 'search:history_sells_month' month_fmt %}") {{ day | date:'F' | title }}
   span &nbsp;
 if next_day_fmt
   span
-    a(href="{% url 'history_sells_day' next_day_fmt %}") {% trans "Next" %} &rarr;
+    a(href="{% url 'search:history_sells_day' next_day_fmt %}") {% trans "Next" %} &rarr;
 
 div#alerts
   div#success.alert.alert-success(role="alert", hidden)
@@ -40,7 +40,7 @@ div#alerts
     ul.nav.nav-tabs
       li.active(role="presentation")
         a {% trans "Sells" %}
-      li(role="presentation"): a(href="{% url 'history_entries_day' day|date:'Y-m-d'  %}") {% trans "Entries" %}
+      li(role="presentation"): a(href="{% url 'search:history_entries_day' day|date:'Y-m-d'  %}") {% trans "Entries" %}
 
 h1 {{ day | date:'l d F Y' | title }}
 
