--- a/templates/search/card_command.pug
+++ b/templates/search/card_command.pug
@@ -14,7 +14,7 @@
 
 // You should have received a copy of the GNU General Public License
 // along with Abelujo.  If not, see <http://www.gnu.org/licenses/>.
-{% extends "base.jade" %}
+{% extends "base.pug" %}
 
 
 {% block content %}
