--- a/templates/search/searchresults.pug
+++ b/templates/search/searchresults.pug
@@ -13,7 +13,7 @@
 
 // You should have received a copy of the GNU General Public License
 // along with Abelujo.  If not, see <http://www.gnu.org/licenses/>.
-{% extends "base.jade" %}
+{% extends "base.pug" %}
 
 
 {% block content %}
