pypugjs doesn't like escaped commas

--- a/templates/base.pug
+++ b/templates/base.pug
@@ -54,7 +54,7 @@ html(ng-app="abelujo")
             {% get_current_language as LANGUAGE_CODE %}
             ul.dropdown-menu
                 li(href="#")
-                    a(href='/{{ LANGUAGE_CODE }}/databasesearch/place', title='{% trans "List and edit the bookshop\'s places" %}') {% trans "Places" %}
+                    a(href='/{{ LANGUAGE_CODE }}/databasesearch/place', title='{% trans "List and edit the bookshop places" %}') {% trans "Places" %}
                 li(href="#")
                     a(href='/{{ LANGUAGE_CODE }}/databasesearch/shelf', title='{% trans "List and edit the shelves" %}') {% trans "Shelves" %}
                 li(href="#")
